--- a/MidtermProject/Views/Base.lproj/Main.storyboard
+++ b/MidtermProject/Views/Base.lproj/Main.storyboard
@@ -198,7 +198,7 @@
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="rLm-NK-vPg" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="3100" y="517.6911544227886"/>
+            <point key="canvasLocation" x="3353" y="518"/>
         </scene>
         <!--Employment Form View Controller-->
         <scene sceneID="2A2-o5-EEH">
@@ -281,15 +281,6 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ylU-CX-dF9">
-                                <rect key="frame" x="164" y="318" width="46" height="30"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <state key="normal" title="Login"/>
-                                <connections>
-                                    <action selector="login:" destination="dXp-fj-aBD" eventType="touchUpInside" id="jKW-Vd-YwW"/>
-                                    <segue destination="p1K-5Z-k2j" kind="presentation" id="rrG-Fi-cK6"/>
-                                </connections>
-                            </button>
                             <textField opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="username" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="rB1-bX-hFM">
                                 <rect key="frame" x="16" y="212" width="343" height="30"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
@@ -304,8 +295,29 @@
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                 <textInputTraits key="textInputTraits" secureTextEntry="YES"/>
                             </textField>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="ScG-Yh-Q1X">
+                                <rect key="frame" x="67" y="20" width="240" height="158"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            </imageView>
+                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ylU-CX-dF9">
+                                <rect key="frame" x="164" y="334" width="46" height="30"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <state key="normal" title="Login"/>
+                                <connections>
+                                    <action selector="login:" destination="dXp-fj-aBD" eventType="touchUpInside" id="jKW-Vd-YwW"/>
+                                    <segue destination="p1K-5Z-k2j" kind="presentation" id="rrG-Fi-cK6"/>
+                                </connections>
+                            </button>
+                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="CmO-nA-0ll">
+                                <rect key="frame" x="132" y="372" width="110" height="30"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <state key="normal" title="Driver Sign-in"/>
+                                <connections>
+                                    <segue destination="O9C-vR-KY3" kind="presentation" id="CT4-yH-TWH"/>
+                                </connections>
+                            </button>
                             <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="HZ4-pW-zvM">
-                                <rect key="frame" x="158" y="356" width="58" height="43"/>
+                                <rect key="frame" x="158" y="410" width="58" height="43"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <state key="normal" title="Register"/>
                                 <connections>
@@ -328,7 +340,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="oRL-Tj-8Yr" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-1684" y="196.55172413793105"/>
+            <point key="canvasLocation" x="-2423" y="197"/>
         </scene>
         <!--Registration View Controller-->
         <scene sceneID="fN6-xe-7uw">
@@ -344,7 +356,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="KWe-jj-cFb" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="252" y="-500"/>
+            <point key="canvasLocation" x="252" y="-500.59970014992507"/>
         </scene>
         <!--Tab Bar Controller-->
         <scene sceneID="A8A-4r-Oiz">
@@ -386,7 +398,7 @@
                 </navigationController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="ayu-fA-0Qg" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="2004" y="-206.44677661169416"/>
+            <point key="canvasLocation" x="2641" y="-206"/>
         </scene>
         <!--Contacts-->
         <scene sceneID="5sr-r4-2rU">
@@ -405,7 +417,7 @@
                 </navigationController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="6Ig-te-hpz" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1664.8" y="517.6911544227886"/>
+            <point key="canvasLocation" x="2697" y="518"/>
         </scene>
         <!--Terminals View Controller-->
         <scene sceneID="8ID-DJ-bbw">
@@ -432,7 +444,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="sBb-gk-gc4" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="312.80000000000001" y="1241.8290854572715"/>
+            <point key="canvasLocation" x="642" y="1100"/>
         </scene>
         <!--Employment-->
         <scene sceneID="v6F-r7-mAz">
@@ -451,7 +463,22 @@
                 </navigationController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="5T4-2T-BiT" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1664.8" y="1272.4137931034484"/>
+            <point key="canvasLocation" x="2310" y="1278"/>
+        </scene>
+        <!--View Controller-->
+        <scene sceneID="MBf-5m-6aW">
+            <objects>
+                <viewController id="O9C-vR-KY3" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="j6Q-1B-ek7">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <viewLayoutGuide key="safeArea" id="Drt-eS-ewF"/>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="htL-80-u7o" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-1609" y="1007"/>
         </scene>
         <!--Terminals-->
         <scene sceneID="ke1-kP-5lT">
@@ -470,12 +497,11 @@
                 </navigationController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="r3D-z5-Ugb" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-436.80000000000001" y="1242.2788605697153"/>
+            <point key="canvasLocation" x="-36" y="1100"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="aaV-FD-p6h">
             <objects>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="xXc-fp-ldA" userLabel="First Responder" sceneMemberID="firstResponder"/>
                 <navigationController automaticallyAdjustsScrollViewInsets="NO" id="90A-oh-evo" sceneMemberID="viewController">
                     <toolbarItems/>
                     <simulatedTabBarMetrics key="simulatedBottomBarMetrics"/>
@@ -488,8 +514,9 @@
                         <segue destination="4vG-GJ-VFc" kind="relationship" relationship="rootViewController" id="JQ9-Et-tdY"/>
                     </connections>
                 </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="xXc-fp-ldA" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-612" y="-499"/>
+            <point key="canvasLocation" x="-473" y="-501"/>
         </scene>
     </scenes>
     <resources>
