--- a/MidtermProject/Views/Base.lproj/Main.storyboard
+++ b/MidtermProject/Views/Base.lproj/Main.storyboard
@@ -354,7 +354,7 @@
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <state key="normal" title="Driver Sign-in"/>
                                 <connections>
-                                    <segue destination="RFi-06-Hix" kind="presentation" id="9BS-en-UMu"/>
+                                    <segue destination="O9C-vR-KY3" kind="show" id="UPK-mU-ahx"/>
                                 </connections>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="HZ4-pW-zvM">
@@ -516,6 +516,15 @@
                                 <rect key="frame" x="16" y="64" width="343" height="247"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                             </mapView>
+                            <navigationBar contentMode="scaleToFill" fixedFrame="YES" backIndicatorImage="back-chevron.png" translatesAutoresizingMaskIntoConstraints="NO" id="VS8-L0-qc1">
+                                <rect key="frame" x="0.0" y="0.0" width="375" height="44"/>
+                                <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
+                                <items>
+                                    <navigationItem title="Title" id="zVy-sP-nGj">
+                                        <barButtonItem key="leftBarButtonItem" title="Back" id="TK4-n7-1le"/>
+                                    </navigationItem>
+                                </items>
+                            </navigationBar>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <viewLayoutGuide key="safeArea" id="Drt-eS-ewF"/>
@@ -549,29 +558,12 @@
             </objects>
             <point key="canvasLocation" x="303.19999999999999" y="1099.7001499250375"/>
         </scene>
-        <!--Navigation Controller-->
-        <scene sceneID="vR2-4D-4fI">
-            <objects>
-                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="RFi-06-Hix" sceneMemberID="viewController">
-                    <toolbarItems/>
-                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="TUD-ZG-cKF">
-                        <rect key="frame" x="0.0" y="20" width="375" height="44"/>
-                        <autoresizingMask key="autoresizingMask"/>
-                    </navigationBar>
-                    <nil name="viewControllers"/>
-                    <connections>
-                        <segue destination="O9C-vR-KY3" kind="relationship" relationship="rootViewController" id="xQV-1k-edG"/>
-                    </connections>
-                </navigationController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="gSv-qT-A5d" userLabel="First Responder" sceneMemberID="firstResponder"/>
-            </objects>
-            <point key="canvasLocation" x="-2049" y="988"/>
-        </scene>
     </scenes>
     <resources>
         <image name="Junior.jpg" width="375" height="338"/>
         <image name="addList.png" width="30" height="30"/>
         <image name="addressBook.png" width="30" height="30"/>
+        <image name="back-chevron.png" width="13" height="21"/>
         <image name="finkle trucking.jpg" width="650" height="351"/>
         <image name="icons8-home-3.png" width="30" height="30"/>
         <image name="icons8-usa-map.png" width="30" height="30"/>
